fixed text wrap

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #145d69;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #13c99b;
 }
 
 body {
